--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,8 +1,8 @@
-# For detailed configuration reference documentation, visit:
+﻿# For detailed configuration reference documentation, visit:
 # https://supabase.com/docs/guides/local-development/cli/config
 # A string used to distinguish different Supabase projects on the same host. Defaults to the
 # working directory name when running `supabase init`.
-project_id = "telugu-wala-links"
+project_id = "h1b-wage-level"
 
 [api]
 enabled = true
