--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,10 @@ VITE_PAYPAL_CLIENT_ID=
 # Leads Database Supabase Configuration (for resume help form)
 VITE_LEADS_SUPABASE_URL=your_leads_supabase_url_here
 VITE_LEADS_SUPABASE_ANON_KEY=your_leads_supabase_anon_key_here
+
+# External Database (audit_reviews + job_jobrole_sponsored)
+VITE_EXTERNAL_SUPABASE_URL=your_external_supabase_url_here
+VITE_EXTERNAL_SUPABASE_ANON_KEY=your_external_supabase_anon_key_here
+
+# Service Role Key (for server-side operations only - DO NOT prefix with VITE_)
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
