--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^9.0.0",
     "@supabase/supabase-js": "^2.86.0",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.3.1",
